raffia/tests/error/less/variable-call/stmt-with-lookups.snap
---
source: raffia/tests/error.rs
---
error: expect token `;`, but found `[`
  ┌─ stmt-with-lookups.less:1:8
  │
1 │ @call()[];
  │        ^


